[tool.poetry]
name = "vortigaunt"
version = "0.10.0"
description = ""
authors = ["aoisensi <me@aoisensi.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
srcstudiomodel = { path = "../srcstudiomodel" }
gltflib = "^1.0.13"
rich-argparse = "^1.0.0"
rich = "^13.1.0"

[tool.poetry.scripts]
vortigaunt = "vortigaunt.cli:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
